# youtube_downloader

./: .gitignore  README.md  YouTubeDownloader.spec  app.py  debug_urls.py  desktop_app.py  inspect_progressive.py  native_app.py  pyproject.toml  reproduce_issue.py  requirements.txt
electron/: README.md  main.js  package.json  preload.js
playdown/: __init__.py  core.py  gui.py  paths.py  queue_manager.py
templates/: index.html
