[project]
name = "youtube-downloader"
version = "0.1.0"
description = "Native Python desktop downloader with persistent queue"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "pillow>=12.1.1",
    "platformdirs>=4.9.4",
    "requests",
    "streamsnapper @ git+https://github.com/henrique-coder/streamsnapper.git@main",
    "yt-dlp>=2025.12.8",
]

[project.scripts]
playdown = "playdown.gui:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
